--- a/2024/paiva/sources/08_nyry.yaml
+++ b/2024/paiva/sources/08_nyry.yaml
@@ -31,5 +31,5 @@ series:
 
     other:
         'Rata C 3,0 km': |
-            3. Timo Lamminmäki 43.36 +6.57
+            3. Timo Lamminmäki 43.36 -
             16. Erkki Kallela 1.00.53 +24.14
