--- a/2025/paiva/config.yaml
+++ b/2025/paiva/config.yaml
@@ -46,6 +46,7 @@ series:
             - {last: Tervola, first: Juha}
             - {last: Toivonen, first: Juha}
             - {last: Ustinov, first: Jarkko}
+            - {last: Vartiainen, first: Louna}
             - {last: Viero, first: Jukka}
             - {last: Viitanen, first: Lauri}
             - {last: Väisänen, first: Mika}
@@ -60,6 +61,7 @@ series:
             - {last: Fröblom, first: Jari}
             - {last: Haataja, first: Jukka}
             - {last: Halonen, first: Harry}
+            - {last: Haukijärvi, first: Martti}
             - {last: Honkanen, first: Timi}
             - {last: Huuhka, first: Pertti}
             - {last: Itäkodes, first: Jari}
